parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    ABSTRACT
    ARRAY
    AS
    BREAK
    CALLABLE
    CASE
    CATCH
    CLASS
    CLONE
    CLOSE_TAG
    COLON
    COMMENT
    CONST
    CONTINUE
    DECLARE
    DEFAULT
    DIE
    DO
    DOUBLE_COLON
    ELSE
    ELSEIF
    EMPTY
    ENDDECLARE
    ENDFOR
    ENDFOREACH
    ENDIF
    ENDSWITCH
    ENDWHILE
    EVAL
    EXIT
    EXTENDS
    FINAL
    FINALLY
    FOR
    OPEN_TAG
    OPEN_TAG_WITH_ECHO
    RETURN
    WHITESPACE

Grammar

Rule 0     S' -> program
Rule 1     program -> statement_list
Rule 2     program -> condition
Rule 3     program -> math_expression
Rule 4     statement_list -> statement
Rule 5     statement_list -> statement_list statement
Rule 6     statement -> expression_statement
Rule 7     statement -> function_declaration
Rule 8     statement -> assignment
Rule 9     statement -> if_statement
Rule 10    statement -> impresion
Rule 11    assignment -> VARIABLE EQUALS expression SEMICOLON
Rule 12    assignment -> VARIABLE EQUALS math_expression SEMICOLON
Rule 13    assignment -> VARIABLE EQUALS array_structure SEMICOLON
Rule 14    assignment -> VARIABLE EQUALS condition SEMICOLON
Rule 15    expression_statement -> expression SEMICOLON
Rule 16    function_declaration -> FUNCTION IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS body_statement_list
Rule 17    body_statement_list -> OPEN_CURLY_BRACKET statement_list CLOSE_CURLY_BRACKET
Rule 18    body_statement_list -> OPEN_CURLY_BRACKET empty CLOSE_CURLY_BRACKET
Rule 19    parameter_list -> parameter
Rule 20    parameter_list -> parameter_list COMMA parameter
Rule 21    parameter_list -> empty
Rule 22    parameter -> VARIABLE
Rule 23    value_parameter_list -> value_parameter
Rule 24    value_parameter_list -> value_parameter_list COMMA value_parameter
Rule 25    value_parameter_list -> empty
Rule 26    value_parameter -> expression
Rule 27    empty -> <empty>
Rule 28    expression -> VARIABLE
Rule 29    expression -> STRING
Rule 30    expression -> BOOLEAN
Rule 31    expression -> NULL
Rule 32    expression -> function_call
Rule 33    expression -> expression PLUS expression
Rule 34    expression -> expression MINUS expression
Rule 35    expression -> expression MULTIPLY expression
Rule 36    expression -> expression DIVIDE expression
Rule 37    expression -> expression MODULO expression
Rule 38    expression -> expression CONCATENATION expression
Rule 39    expression -> expression CONCATENATION_ASSIGNMENT expression
Rule 40    function_call -> IDENTIFIER OPEN_PARENTHESIS CLOSE_PARENTHESIS
Rule 41    if_statement -> IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS body_statement_list
Rule 42    impresion -> ECHO OPEN_PARENTHESIS value_parameter_list CLOSE_PARENTHESIS SEMICOLON
Rule 43    condition -> expression
Rule 44    condition -> condition comparison condition
Rule 45    condition -> OPEN_PARENTHESIS condition comparison condition CLOSE_PARENTHESIS
Rule 46    condition -> OPEN_PARENTHESIS condition CLOSE_PARENTHESIS comparison condition
Rule 47    condition -> condition comparison OPEN_PARENTHESIS condition CLOSE_PARENTHESIS
Rule 48    condition -> NOT condition
Rule 49    comparison -> DOUBLE_EQUALS
Rule 50    comparison -> NOT_EQUALS
Rule 51    comparison -> GREATER_THAN
Rule 52    comparison -> LESS_THAN
Rule 53    comparison -> GREATER_THAN_OR_EQUALS
Rule 54    comparison -> LESS_THAN_OR_EQUALS
Rule 55    comparison -> AND
Rule 56    comparison -> OR
Rule 57    math_operator -> PLUS
Rule 58    math_operator -> DIVIDE
Rule 59    math_operator -> MINUS
Rule 60    math_operator -> MULTIPLY
Rule 61    math_operator -> MODULO
Rule 62    math_expression -> NUMBER
Rule 63    math_expression -> math_expression math_operator math_expression
Rule 64    math_expression -> OPEN_PARENTHESIS math_expression math_operator math_expression CLOSE_PARENTHESIS
Rule 65    math_expression -> OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS math_operator math_expression
Rule 66    math_expression -> math_expression math_operator OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS
Rule 67    array_structure -> OPEN_SQUARE_BRACKET key_declaration CLOSE_SQUARE_BRACKET
Rule 68    key_declaration -> expression EQUALS GREATER_THAN expression
Rule 69    key_declaration -> key_declaration COMMA key_declaration
Rule 70    key_declaration -> empty

Terminals, with rules where they appear

ABSTRACT             : 
AND                  : 55
ARRAY                : 
AS                   : 
BOOLEAN              : 30
BREAK                : 
CALLABLE             : 
CASE                 : 
CATCH                : 
CLASS                : 
CLONE                : 
CLOSE_CURLY_BRACKET  : 17 18
CLOSE_PARENTHESIS    : 16 40 41 42 45 46 47 64 65 66
CLOSE_SQUARE_BRACKET : 67
CLOSE_TAG            : 
COLON                : 
COMMA                : 20 24 69
COMMENT              : 
CONCATENATION        : 38
CONCATENATION_ASSIGNMENT : 39
CONST                : 
CONTINUE             : 
DECLARE              : 
DEFAULT              : 
DIE                  : 
DIVIDE               : 36 58
DO                   : 
DOUBLE_COLON         : 
DOUBLE_EQUALS        : 49
ECHO                 : 42
ELSE                 : 
ELSEIF               : 
EMPTY                : 
ENDDECLARE           : 
ENDFOR               : 
ENDFOREACH           : 
ENDIF                : 
ENDSWITCH            : 
ENDWHILE             : 
EQUALS               : 11 12 13 14 68
EVAL                 : 
EXIT                 : 
EXTENDS              : 
FINAL                : 
FINALLY              : 
FOR                  : 
FUNCTION             : 16
GREATER_THAN         : 51 68
GREATER_THAN_OR_EQUALS : 53
IDENTIFIER           : 16 40
IF                   : 41
LESS_THAN            : 52
LESS_THAN_OR_EQUALS  : 54
MINUS                : 34 59
MODULO               : 37 61
MULTIPLY             : 35 60
NOT                  : 48
NOT_EQUALS           : 50
NULL                 : 31
NUMBER               : 62
OPEN_CURLY_BRACKET   : 17 18
OPEN_PARENTHESIS     : 16 40 41 42 45 46 47 64 65 66
OPEN_SQUARE_BRACKET  : 67
OPEN_TAG             : 
OPEN_TAG_WITH_ECHO   : 
OR                   : 56
PLUS                 : 33 57
RETURN               : 
SEMICOLON            : 11 12 13 14 15 42
STRING               : 29
VARIABLE             : 11 12 13 14 22 28
WHITESPACE           : 
error                : 

Nonterminals, with rules where they appear

array_structure      : 13
assignment           : 8
body_statement_list  : 16 41
comparison           : 44 45 46 47
condition            : 2 14 41 44 44 45 45 46 46 47 47 48
empty                : 18 21 25 70
expression           : 11 15 26 33 33 34 34 35 35 36 36 37 37 38 38 39 39 43 68 68
expression_statement : 6
function_call        : 32
function_declaration : 7
if_statement         : 9
impresion            : 10
key_declaration      : 67 69 69
math_expression      : 3 12 63 63 64 64 65 65 66 66
math_operator        : 63 64 65 66
parameter            : 19 20
parameter_list       : 16 20
program              : 0
statement            : 4 5
statement_list       : 1 5 17
value_parameter      : 23 24
value_parameter_list : 24 42

Parsing method: LALR

state 0

    (0) S' -> . program
    (1) program -> . statement_list
    (2) program -> . condition
    (3) program -> . math_expression
    (4) statement_list -> . statement
    (5) statement_list -> . statement_list statement
    (43) condition -> . expression
    (44) condition -> . condition comparison condition
    (45) condition -> . OPEN_PARENTHESIS condition comparison condition CLOSE_PARENTHESIS
    (46) condition -> . OPEN_PARENTHESIS condition CLOSE_PARENTHESIS comparison condition
    (47) condition -> . condition comparison OPEN_PARENTHESIS condition CLOSE_PARENTHESIS
    (48) condition -> . NOT condition
    (62) math_expression -> . NUMBER
    (63) math_expression -> . math_expression math_operator math_expression
    (64) math_expression -> . OPEN_PARENTHESIS math_expression math_operator math_expression CLOSE_PARENTHESIS
    (65) math_expression -> . OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS math_operator math_expression
    (66) math_expression -> . math_expression math_operator OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS
    (6) statement -> . expression_statement
    (7) statement -> . function_declaration
    (8) statement -> . assignment
    (9) statement -> . if_statement
    (10) statement -> . impresion
    (28) expression -> . VARIABLE
    (29) expression -> . STRING
    (30) expression -> . BOOLEAN
    (31) expression -> . NULL
    (32) expression -> . function_call
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression CONCATENATION expression
    (39) expression -> . expression CONCATENATION_ASSIGNMENT expression
    (15) expression_statement -> . expression SEMICOLON
    (16) function_declaration -> . FUNCTION IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS body_statement_list
    (11) assignment -> . VARIABLE EQUALS expression SEMICOLON
    (12) assignment -> . VARIABLE EQUALS math_expression SEMICOLON
    (13) assignment -> . VARIABLE EQUALS array_structure SEMICOLON
    (14) assignment -> . VARIABLE EQUALS condition SEMICOLON
    (41) if_statement -> . IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS body_statement_list
    (42) impresion -> . ECHO OPEN_PARENTHESIS value_parameter_list CLOSE_PARENTHESIS SEMICOLON
    (40) function_call -> . IDENTIFIER OPEN_PARENTHESIS CLOSE_PARENTHESIS

    OPEN_PARENTHESIS shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 9
    VARIABLE        shift and go to state 15
    STRING          shift and go to state 16
    BOOLEAN         shift and go to state 17
    NULL            shift and go to state 18
    FUNCTION        shift and go to state 20
    IF              shift and go to state 22
    ECHO            shift and go to state 23
    IDENTIFIER      shift and go to state 21

    program                        shift and go to state 1
    statement_list                 shift and go to state 2
    condition                      shift and go to state 3
    math_expression                shift and go to state 4
    statement                      shift and go to state 5
    expression                     shift and go to state 6
    expression_statement           shift and go to state 10
    function_declaration           shift and go to state 11
    assignment                     shift and go to state 12
    if_statement                   shift and go to state 13
    impresion                      shift and go to state 14
    function_call                  shift and go to state 19

state 1

    (0) S' -> program .



state 2

    (1) program -> statement_list .
    (5) statement_list -> statement_list . statement
    (6) statement -> . expression_statement
    (7) statement -> . function_declaration
    (8) statement -> . assignment
    (9) statement -> . if_statement
    (10) statement -> . impresion
    (15) expression_statement -> . expression SEMICOLON
    (16) function_declaration -> . FUNCTION IDENTIFIER OPEN_PARENTHESIS parameter_list CLOSE_PARENTHESIS body_statement_list
    (11) assignment -> . VARIABLE EQUALS expression SEMICOLON
    (12) assignment -> . VARIABLE EQUALS math_expression SEMICOLON
    (13) assignment -> . VARIABLE EQUALS array_structure SEMICOLON
    (14) assignment -> . VARIABLE EQUALS condition SEMICOLON
    (41) if_statement -> . IF OPEN_PARENTHESIS condition CLOSE_PARENTHESIS body_statement_list
    (42) impresion -> . ECHO OPEN_PARENTHESIS value_parameter_list CLOSE_PARENTHESIS SEMICOLON
    (28) expression -> . VARIABLE
    (29) expression -> . STRING
    (30) expression -> . BOOLEAN
    (31) expression -> . NULL
    (32) expression -> . function_call
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression CONCATENATION expression
    (39) expression -> . expression CONCATENATION_ASSIGNMENT expression
    (40) function_call -> . IDENTIFIER OPEN_PARENTHESIS CLOSE_PARENTHESIS

    $end            reduce using rule 1 (program -> statement_list .)
    FUNCTION        shift and go to state 20
    VARIABLE        shift and go to state 26
    IF              shift and go to state 22
    ECHO            shift and go to state 23
    STRING          shift and go to state 16
    BOOLEAN         shift and go to state 17
    NULL            shift and go to state 18
    IDENTIFIER      shift and go to state 21

    statement                      shift and go to state 24
    expression_statement           shift and go to state 10
    function_declaration           shift and go to state 11
    assignment                     shift and go to state 12
    if_statement                   shift and go to state 13
    impresion                      shift and go to state 14
    expression                     shift and go to state 25
    function_call                  shift and go to state 19

state 3

    (2) program -> condition .
    (44) condition -> condition . comparison condition
    (47) condition -> condition . comparison OPEN_PARENTHESIS condition CLOSE_PARENTHESIS
    (49) comparison -> . DOUBLE_EQUALS
    (50) comparison -> . NOT_EQUALS
    (51) comparison -> . GREATER_THAN
    (52) comparison -> . LESS_THAN
    (53) comparison -> . GREATER_THAN_OR_EQUALS
    (54) comparison -> . LESS_THAN_OR_EQUALS
    (55) comparison -> . AND
    (56) comparison -> . OR

    $end            reduce using rule 2 (program -> condition .)
    DOUBLE_EQUALS   shift and go to state 28
    NOT_EQUALS      shift and go to state 29
    GREATER_THAN    shift and go to state 30
    LESS_THAN       shift and go to state 31
    GREATER_THAN_OR_EQUALS shift and go to state 32
    LESS_THAN_OR_EQUALS shift and go to state 33
    AND             shift and go to state 34
    OR              shift and go to state 35

    comparison                     shift and go to state 27

state 4

    (3) program -> math_expression .
    (63) math_expression -> math_expression . math_operator math_expression
    (66) math_expression -> math_expression . math_operator OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS
    (57) math_operator -> . PLUS
    (58) math_operator -> . DIVIDE
    (59) math_operator -> . MINUS
    (60) math_operator -> . MULTIPLY
    (61) math_operator -> . MODULO

    $end            reduce using rule 3 (program -> math_expression .)
    PLUS            shift and go to state 37
    DIVIDE          shift and go to state 38
    MINUS           shift and go to state 39
    MULTIPLY        shift and go to state 40
    MODULO          shift and go to state 41

    math_operator                  shift and go to state 36

state 5

    (4) statement_list -> statement .

    FUNCTION        reduce using rule 4 (statement_list -> statement .)
    VARIABLE        reduce using rule 4 (statement_list -> statement .)
    IF              reduce using rule 4 (statement_list -> statement .)
    ECHO            reduce using rule 4 (statement_list -> statement .)
    STRING          reduce using rule 4 (statement_list -> statement .)
    BOOLEAN         reduce using rule 4 (statement_list -> statement .)
    NULL            reduce using rule 4 (statement_list -> statement .)
    IDENTIFIER      reduce using rule 4 (statement_list -> statement .)
    $end            reduce using rule 4 (statement_list -> statement .)
    CLOSE_CURLY_BRACKET reduce using rule 4 (statement_list -> statement .)


state 6

    (43) condition -> expression .
    (33) expression -> expression . PLUS expression
    (34) expression -> expression . MINUS expression
    (35) expression -> expression . MULTIPLY expression
    (36) expression -> expression . DIVIDE expression
    (37) expression -> expression . MODULO expression
    (38) expression -> expression . CONCATENATION expression
    (39) expression -> expression . CONCATENATION_ASSIGNMENT expression
    (15) expression_statement -> expression . SEMICOLON

    DOUBLE_EQUALS   reduce using rule 43 (condition -> expression .)
    NOT_EQUALS      reduce using rule 43 (condition -> expression .)
    GREATER_THAN    reduce using rule 43 (condition -> expression .)
    LESS_THAN       reduce using rule 43 (condition -> expression .)
    GREATER_THAN_OR_EQUALS reduce using rule 43 (condition -> expression .)
    LESS_THAN_OR_EQUALS reduce using rule 43 (condition -> expression .)
    AND             reduce using rule 43 (condition -> expression .)
    OR              reduce using rule 43 (condition -> expression .)
    $end            reduce using rule 43 (condition -> expression .)
    PLUS            shift and go to state 42
    MINUS           shift and go to state 43
    MULTIPLY        shift and go to state 44
    DIVIDE          shift and go to state 45
    MODULO          shift and go to state 46
    CONCATENATION   shift and go to state 47
    CONCATENATION_ASSIGNMENT shift and go to state 48
    SEMICOLON       shift and go to state 49


state 7

    (45) condition -> OPEN_PARENTHESIS . condition comparison condition CLOSE_PARENTHESIS
    (46) condition -> OPEN_PARENTHESIS . condition CLOSE_PARENTHESIS comparison condition
    (64) math_expression -> OPEN_PARENTHESIS . math_expression math_operator math_expression CLOSE_PARENTHESIS
    (65) math_expression -> OPEN_PARENTHESIS . math_expression CLOSE_PARENTHESIS math_operator math_expression
    (43) condition -> . expression
    (44) condition -> . condition comparison condition
    (45) condition -> . OPEN_PARENTHESIS condition comparison condition CLOSE_PARENTHESIS
    (46) condition -> . OPEN_PARENTHESIS condition CLOSE_PARENTHESIS comparison condition
    (47) condition -> . condition comparison OPEN_PARENTHESIS condition CLOSE_PARENTHESIS
    (48) condition -> . NOT condition
    (62) math_expression -> . NUMBER
    (63) math_expression -> . math_expression math_operator math_expression
    (64) math_expression -> . OPEN_PARENTHESIS math_expression math_operator math_expression CLOSE_PARENTHESIS
    (65) math_expression -> . OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS math_operator math_expression
    (66) math_expression -> . math_expression math_operator OPEN_PARENTHESIS math_expression CLOSE_PARENTHESIS
    (28) expression -> . VARIABLE
    (29) expression -> . STRING
    (30) expression -> . BOOLEAN
    (31) expression -> . NULL
    (32) expression -> . function_call
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression CONCATENATION expression
    (39) expression -> . expression CONCATENATION_ASSIGNMENT expression
    (40) function_call -> . IDENTIFIER OPEN_PARENTHESIS CLOSE_PARENTHESIS

    OPEN_PARENTHESIS shift and go to state 7
    NOT             shift and go to state 8
    NUMBER          shift and go to state 9
    VARIABLE        shift and go to state 53
    STRING          shift and go to state 16
    BOOLEAN         shift and go to state 17
    NULL            shift and go to state 18
    IDENTIFIER      shift and go to state 21

    condition                      shift and go to state 50
    math_expression                shift and go to state 51
    expression                     shift and go to state 52
    function_call                  shift and go to state 19

state 8

    (48) condition -> NOT . condition
    (43) condition -> . expression
    (44) condition -> . condition comparison condition
    (45) condition -> . OPEN_PARENTHESIS condition comparison condition CLOSE_PARENTHESIS
    (46) condition -> . OPEN_PARENTHESIS condition CLOSE_PARENTHESIS comparison condition
    (47) condition -> . condition comparison OPEN_PARENTHESIS condition CLOSE_PARENTHESIS
    (48) condition -> . NOT condition
    (28) expression -> . VARIABLE
    (29) expression -> . STRING
    (30) expression -> . BOOLEAN
    (31) expression -> . NULL
    (32) expression -> . function_call
    (33) expression -> . expression PLUS expression
    (34) expression -> . expression MINUS expression
    (35) expression -> . expression MULTIPLY expression
    (36) expression -> . expression DIVIDE expression
    (37) expression -> . expression MODULO expression
    (38) expression -> . expression CONCATENATION expression
    (39) expression -> . expression CONCATENATION_ASSIGNMENT expression
    (40) function_call -> . IDENTIFIER OPEN_PARENTHESIS CLOSE_PARENTHESIS

    OPEN_PARENTHESIS shift and go to state 55
    NOT             shift and go to state 8
    VARIABLE        shift and go to state 53
    STRING          shift and go to state 16
    BOOLEAN         shift and go to state 17
    NULL            shift and go to state 18
    IDENTIFIER      shift and go to state 21

    condition                      shift and go to state 54
    expression                     shift and go to state 52
    function_call                  shift and go to state 19

state 9

    (62) math_expression -> NUMBER .

    PLUS            reduce using rule 62 (math_expression -> NUMBER .)
    DIVIDE          reduce using rule 62 (math_expression -> NUMBER .)
    MINUS           reduce using rule 62 (math_expression -> NUMBER .)
    MULTIPLY        reduce using rule 62 (math_expression -> NUMBER .)
    MODULO          reduce using rule 62 (math_expression -> NUMBER .)
    $end            reduce using rule 62 (math_expression -> NUMBER .)
    CLOSE_PARENTHESIS reduce using rule 62 (math_expression -> NUMBER .)
    SEMICOLON       reduce using rule 62 (math_expression -> NUMBER .)


state 10

    (6) statement -> expression_statement .

    FUNCTION        reduce using rule 6 (statement -> expression_statement .)
    VARIABLE        reduce using rule 6 (statement -> expression_statement .)
    IF              reduce using rule 6 (statement -> expression_statement .)
    ECHO            reduce using rule 6 (statement -> expression_statement .)
    STRING          reduce using rule 6 (statement -> expression_statement .)
    BOOLEAN         reduce using rule 6 (statement -> expression_statement .)
    NULL            reduce using rule 6 (statement -> expression_statement .)
    IDENTIFIER      reduce using rule 6 (statement -> expression_statement .)
    $end            reduce using rule 6 (statement -> expression_statement .)
    CLOSE_CURLY_BRACKET reduce using rule 6 (statement -> expression_statement .)


state 11

    (7) statement -> function_declaration .
